test/types/records/split-init/error-never-initialized-values-mentioned1.good
error-never-initialized-values-mentioned1.chpl:3: In function 'error':
error-never-initialized-values-mentioned1.chpl:5: error: 'a2' is not initialized and has no type
error-never-initialized-values-mentioned1.chpl:5: note: cannot find initialization point to split-init this variable
error-never-initialized-values-mentioned1.chpl:7: note: 'a2' is used here before it is initialized
